# voidlight_markitdown

./: .bumpversion.cfg  .editorconfig  .flake8  .gitignore  .license-header.txt  .pre-commit-config.yaml  .report.json  .yamllint.yml  ARCHITECTURE_ALIGNMENT_REPORT.md  AUDIT_REPORT.md  CHANGELOG.md  CI_CD_VALIDATION_REPORT.md  CI_CD_VALIDATION_SUMMARY.md  COMPREHENSIVE_TEST_EXECUTION_REPORT.md  CONTRIBUTING.md  CONVERTER_TEST_REPORT.md  CRITICAL_FIXES_PLAN.md  DOCUMENTATION_SUMMARY.md  Dockerfile  Dockerfile.mcp  Dockerfile.test  INTEGRATION_TESTING_GUIDE.md  LICENSE  MCP_HTTP_SSE_FIX_REPORT.md  MCP_HTTP_SSE_IMPLEMENTATION_SUMMARY.md  MCP_INTEGRATION_TEST_REPORT.md  MCP_SERVER_TEST_REPORT.md  MCP_TEST_SUMMARY.md  Makefile  PRODUCTION_DEPLOYMENT_GUIDE.md  PROJECT_STRUCTURE_PLAN.md  PROJECT_SUMMARY.md  README.md  TEST_FIX_SUMMARY.md  TRIGGER_WORKFLOW_GUIDE.md  activate-mcp-env.sh  ci_validation_report_20250723_004748.json  cleanup.sh  comprehensive_test_execution.py  comprehensive_test_validation_report.json  (+52 more)
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: build.yml  integration-tests.yml  release.yml
.taskmaster/: state.json
.taskmaster/docs/: prd.txt
chaos_engineering/: error_recovery_framework.py  production_recovery_tests.py
config/development/: logging.yaml
deploy/: config.json.example
deploy/kubernetes/: configmap.yaml  deployment.yaml  namespace.yaml  service.yaml
docs/: index.md
docs/api/: mcp-api.md  python-api.md
docs/deployment/: docker.md  migration-plan.md  performance.md
docs/development/: architecture.md  logging.md  setup.md
docs/diagrams/: architecture.mmd
docs/guides/: examples.md  file-formats.md  getting-started.md  korean-features.md
docs/templates/: converter-template.md
examples/: logging_demo.py
mcp-env/: pyvenv.cfg
mcp_client_tests/: MCP_CLIENT_INTEGRATION_GUIDE.md  TROUBLESHOOTING.md  package.json  requirements.txt
mcp_client_tests/clients/: performance_test_client.py
mcp_client_tests/configs/: claude_desktop_config.json  vscode_mcp_config.json
mcp_client_tests/test_files/: korean_sample.md
production_resilience/: README.md  error_injection_framework.py  incident_response_playbook.md  production_readiness_checklist.md  recovery_validation_tests.py  run_all_resilience_tests.py
requirements/: base.txt  development.txt  mcp.txt  optional.txt  production.txt  testing.txt
scripts/ci/: check_release.py  create_release.py  deploy_production.py  deploy_staging.py
scripts/debug/: remote_debug_server.py
scripts/git/: pre-commit  pre-push
scripts/maintenance/: check_licenses.py  check_requirements.py  clean.sh  generate_changelog.py  generate_release_notes.py  profile_app.py
scripts/performance/: profile_converter.py
scripts/setup/: dev_setup.sh
src/voidlight_markitdown/: __about__.py  __init__.py  __main__.py
src/voidlight_markitdown/api/: __init__.py  cli.py
src/voidlight_markitdown/converters/: __init__.py  _audio_converter.py  _bing_serp_converter.py  _csv_converter.py  _doc_intel_converter.py  _docx_converter.py  _epub_converter.py  _exiftool.py  _html_converter.py  _image_converter.py  _ipynb_converter.py  _llm_caption.py  _outlook_msg_converter.py  _pdf_converter.py  _plain_text_converter.py  _pptx_converter.py  _rss_converter.py  _transcribe_audio.py  _wikipedia_converter.py  _xlsx_converter.py  _youtube_converter.py  _zip_converter.py  base.py
src/voidlight_markitdown/core/: __init__.py  exceptions.py  markitdown.py  stream_info.py
src/voidlight_markitdown/korean/: __init__.py  nlp.py  utils.py
src/voidlight_markitdown/utils/: __init__.py  cli_logging.py  logging.py  uri_utils.py
stress_testing/: concurrent_stress_test_framework.py  monitoring_dashboard.py  performance_analyzer.py  quick_start.sh  requirements.txt  sample_test_config.json
test_artifacts/: container_test_results.json
tests/: README.md  REORGANIZATION_SUMMARY.md  TEST_REPORT.md  __init__.py  conftest.py  generate_test_report.py  run_tests.sh
tests/e2e/: README.md  __init__.py
tests/e2e/workflows/: run_chaos_tests.py  run_integration_tests_automated.py
tests/fixtures/: __init__.py  test_notebook.ipynb
tests/integration/: README.md  __init__.py
tests/integration/audio_test_suite/: benchmark_audio_performance.py
tests/integration/mcp/client_tests/: README.md  run_all_tests.py
tests/integration/mcp/client_tests/clients/: nodejs_test_client.js  protocol_compliance_validator.py  python_test_client.py
tests/integration/mcp/client_tests/configs/: custom_client_config.yaml
tests/performance/: README.md  __init__.py
tests/performance/benchmarks/: check_dependencies.py  generate_test_files.py  requirements.txt  run_all_tests.py  stress_test.py
tests/performance/resilience/chaos/: enhanced_error_recovery_tests.py  monitoring_config.py
tests/performance/resilience/framework/: chaos_engineering_suite.py
tests/performance/stress/framework/: README.md  client_simulators.py  run_stress_tests.py  validate_setup.py
tests/unit/: README.md  __init__.py
